Changed c_{\theta} to c and edited some of modelling chapter

--- a/control/lqr.tex
+++ b/control/lqr.tex
@@ -38,9 +38,9 @@
             \bm{A}_A &= 
                 \begin{bmatrix}
                     0 & -1 & 0 & 0 \\
-                    0 & 0 & \frac{ m_p \cdot g}{m_Q} & \frac{c_{\theta}}{(l\cdot m_Q)} \\
+                    0 & 0 & \frac{ m_p \cdot g}{m_Q} & \frac{c}{(l\cdot m_Q)} \\
                     0 & 0 & 0 & 1 \\
-                    0 & 0 & \frac{ (m_p+m_Q) \cdot g}{(m_Q \cdot l) } & \frac{ -c_{\theta} \cdot (m_p+m_Q)}{(l^2 \cdot m_Q \cdot m_p)}
+                    0 & 0 & \frac{ (m_p+m_Q) \cdot g}{(m_Q \cdot l) } & \frac{ -c \cdot (m_p+m_Q)}{(l^2 \cdot m_Q \cdot m_p)}
                 \end{bmatrix}, \mbox{ and} \\
             \bm{B}_A &= 
                 \begin{bmatrix}
@@ -55,9 +55,9 @@
         % \bm{A}_A &= 
         % \begin{bmatrix}
         %     0 & -1 & 0 & 0 \\
-        %     0 & \frac{ -c_{air} }{m_Q} & \frac{ m_p \cdot g}{m_Q} & \frac{c_{\theta}}{(l\cdot m_Q)} \\
+        %     0 & \frac{ -c_{air} }{m_Q} & \frac{ m_p \cdot g}{m_Q} & \frac{c}{(l\cdot m_Q)} \\
         %     0 & 0 & 0 & 1 \\
-        %     0 & \frac{ c_{air} }{ (m_Q \cdot l) } & \frac{ (m_p+m_Q) \cdot g}{(m_Q \cdot l) } & \frac{ -c_{\theta} \cdot (m_p+m_Q)}{(l^2 \cdot m_Q \cdot m_p)}
+        %     0 & \frac{ c_{air} }{ (m_Q \cdot l) } & \frac{ (m_p+m_Q) \cdot g}{(m_Q \cdot l) } & \frac{ -c \cdot (m_p+m_Q)}{(l^2 \cdot m_Q \cdot m_p)}
         % \end{bmatrix}, \mbox{ and} \\
 
         \paragraph
