--- a/results/results.tex
+++ b/results/results.tex
@@ -207,10 +207,10 @@
 
             \paragraph
             One of the a priori modelling assumptions mentioned in Section~\ref{sec:param_estimation},
-            is that the suspended payload is a point mass.
+            is that the suspended payload is a point-mass.
             This reduced the considered suspended payload system to a simple pendulum in the white-box model.
             Figure~\ref{fig:practical_double_pendulum} shows a photo of an elongated payload suspended from Honeybee during a practical flight
-            This is a practical example of a dynamic payload that deviates significantly from the point mass assumption.
+            This is a practical example of a dynamic payload that deviates significantly from the point-mass assumption.
             The mass distribution causes a relative rotation of the payload with respect to the suspended cable,
             which significantly affects the flight dynamics.
             
