--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -604,7 +604,7 @@
         in conjunction with \gls{LQR} control to minimize swing angles of an unknown payload.
         However, many payloads do not satisfy the assumptions made in for the a priori model
         which is detrimental to performance of white-box method.
-        For example, for an elongated payload attached to the cable the point mass assumption does not hold.
+        For example, for an elongated payload attached to the cable the point-mass assumption does not hold.
         The \gls{CoM} of the payload is well below the attachment point of the cable, 
         which creates a double pendulum model that differs significantly from a simple pendulum.
         Such a payload is better represented in \gls{2D} by the double pendulum modelled in Figure~\ref{fig:double_pend}, 
