--- a/system_id/white_black_box.tex
+++ b/system_id/white_black_box.tex
@@ -21,7 +21,7 @@
         for swing damping control of a multirotor with an unknown suspended payload.
         Recall from Chapter~\ref{chap:modelling} that the system was modelled as two connected rigid bodies with the following assumptions:
         \begin{itemize}
-            \item The payload is a point mass.
+            \item The payload is a point-mass.
             \item The link is massless.
             \item The link is rigid.
             \item The link is attached to the \gls{CoM} of the multirotor.
